src/slvs/lib.pyx


def add_circle(grouph: int, normal: Slvs_Entity, center: Slvs_Entity, radius: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Entity:
    return Slvs_AddCircle(grouph, normal, center, radius, workplane)

def add_workplane(grouph: int, origin: Slvs_Entity, nm: Slvs_Entity) -> Slvs_Entity:
    return Slvs_AddWorkplane(grouph, origin, nm)

def add_base_2d(grouph: int) -> Slvs_Entity:
    return Slvs_AddBase2D(grouph)

# constraints
def add_constraint(grouph: int, c_type: int, workplane: Slvs_Entity, val: float, ptA: Slvs_Entity = E_NONE,
        ptB: Slvs_Entity = E_NONE, entityA: Slvs_Entity = E_NONE,
        entityB: Slvs_Entity = E_NONE, entityC: Slvs_Entity = E_NONE,
        entityD: Slvs_Entity = E_NONE, other: int = 0, other2: int = 0) -> Slvs_Constraint:
    return Slvs_AddConstraint(grouph, c_type, workplane, val, ptA, ptB, entityA, entityB, entityC, entityD, other, other2)

def coincident(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Coincident(grouph, entityA, entityB, workplane)

def distance(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_Distance(grouph, entityA, entityB, value, workplane)

def equal(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Equal(grouph, entityA, entityB, workplane)

def equal_angle(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, entityC: Slvs_Entity,
                                        entityD: Slvs_Entity,
                                        workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_EqualAngle(grouph, entityA, entityB, entityC, entityD, workplane)

def equal_point_to_line(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity,
                                        entityC: Slvs_Entity, entityD: Slvs_Entity,
                                        workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_EqualPointToLine(grouph, entityA, entityB, entityC, entityD, workplane)

def ratio(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Ratio(grouph, entityA, entityB, value, workplane)

def symmetric(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, entityC: Slvs_Entity = E_NONE, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Symmetric(grouph, entityA, entityB, entityC, workplane)

def symmetric_h(grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_SymmetricH(grouph, ptA, ptB, workplane)

def symmetric_v(grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_SymmetricV(grouph, ptA, ptB, workplane)

def midpoint(grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Midpoint(grouph, ptA, ptB, workplane)

def horizontal(grouph: int, entityA: Slvs_Entity, workplane: Slvs_Entity, entityB: Slvs_Entity = E_NONE) -> Slvs_Constraint:
    return Slvs_Horizontal(grouph, entityA, workplane, entityB)

def vertical(grouph: int, entityA: Slvs_Entity, workplane: Slvs_Entity, entityB: Slvs_Entity = E_NONE) -> Slvs_Constraint:
    return Slvs_Vertical(grouph, entityA, workplane, entityB)

def diameter(grouph: int, entityA: Slvs_Entity, value: float) -> Slvs_Constraint:
    return Slvs_Diameter(grouph, entityA, value)

def same_orientation(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_SameOrientation(grouph, entityA, entityB)

def angle(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity = E_FREE_IN_3D, inverse: bool = False) -> Slvs_Constraint:
    return Slvs_Angle(grouph, entityA, entityB, value, workplane, inverse)

def perpendicular(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D, inverse: bool = False) -> Slvs_Constraint:
    return Slvs_Perpendicular(grouph, entityA, entityB, workplane, inverse)

def parallel(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Parallel(grouph, entityA, entityB, workplane)

def tangent(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Tangent(grouph, entityA, entityB, workplane)

def distance_proj(grouph: int, ptA: Slvs_Entity, ptB: Slvs_Entity, value: float) -> Slvs_Constraint:
    return Slvs_DistanceProj(grouph, ptA, ptB, value)

def length_diff(grouph: int, entityA: Slvs_Entity, entityB: Slvs_Entity, value: float, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_LengthDiff(grouph, entityA, entityB, value, workplane)

def dragged(grouph: int, ptA: Slvs_Entity, workplane: Slvs_Entity = E_FREE_IN_3D) -> Slvs_Constraint:
    return Slvs_Dragged(grouph, ptA, workplane)

# solver
class ResultFlag(IntEnum):
    """Symbol of the result flags."""
    OKAY = _SLVS_RESULT_OKAY
    INCONSISTENT = _SLVS_RESULT_INCONSISTENT
    DIDNT_CONVERGE = _SLVS_RESULT_DIDNT_CONVERGE
    TOO_MANY_UNKNOWNS = _SLVS_RESULT_TOO_MANY_UNKNOWNS
    REDUNDANT_OKAY = _SLVS_RESULT_REDUNDANT_OKAY

class ConstraintType(IntEnum):
    """Symbol of the constraint types."""
    POINTS_COINCIDENT = _SLVS_C_POINTS_COINCIDENT
    PT_PT_DISTANCE = _SLVS_C_PT_PT_DISTANCE
    PT_PLANE_DISTANCE = _SLVS_C_PT_PLANE_DISTANCE
    PT_LINE_DISTANCE = _SLVS_C_PT_LINE_DISTANCE
    PT_FACE_DISTANCE = _SLVS_C_PT_FACE_DISTANCE
    PT_IN_PLANE = _SLVS_C_PT_IN_PLANE
    PT_ON_LINE = _SLVS_C_PT_ON_LINE
    PT_ON_FACE = _SLVS_C_PT_ON_FACE
    EQUAL_LENGTH_LINES = _SLVS_C_EQUAL_LENGTH_LINES
    LENGTH_RATIO = _SLVS_C_LENGTH_RATIO
    EQ_LEN_PT_LINE_D = _SLVS_C_EQ_LEN_PT_LINE_D
    EQ_PT_LN_DISTANCES = _SLVS_C_EQ_PT_LN_DISTANCES
    EQUAL_ANGLE = _SLVS_C_EQUAL_ANGLE
    EQUAL_LINE_ARC_LEN = _SLVS_C_EQUAL_LINE_ARC_LEN
    SYMMETRIC = _SLVS_C_SYMMETRIC
    SYMMETRIC_HORIZ = _SLVS_C_SYMMETRIC_HORIZ
    SYMMETRIC_VERT = _SLVS_C_SYMMETRIC_VERT
    SYMMETRIC_LINE = _SLVS_C_SYMMETRIC_LINE
    AT_MIDPOINT = _SLVS_C_AT_MIDPOINT
    HORIZONTAL = _SLVS_C_HORIZONTAL
    VERTICAL = _SLVS_C_VERTICAL
    DIAMETER = _SLVS_C_DIAMETER
    PT_ON_CIRCLE = _SLVS_C_PT_ON_CIRCLE
    SAME_ORIENTATION = _SLVS_C_SAME_ORIENTATION
    ANGLE = _SLVS_C_ANGLE
    PARALLEL = _SLVS_C_PARALLEL
    PERPENDICULAR = _SLVS_C_PERPENDICULAR
    ARC_LINE_TANGENT = _SLVS_C_ARC_LINE_TANGENT
    CUBIC_LINE_TANGENT = _SLVS_C_CUBIC_LINE_TANGENT
    EQUAL_RADIUS = _SLVS_C_EQUAL_RADIUS
    PROJ_PT_DISTANCE = _SLVS_C_PROJ_PT_DISTANCE
    WHERE_DRAGGED = _SLVS_C_WHERE_DRAGGED
    CURVE_CURVE_TANGENT = _SLVS_C_CURVE_CURVE_TANGENT
    LENGTH_DIFFERENCE = _SLVS_C_LENGTH_DIFFERENCE
    ARC_ARC_LEN_RATIO = _SLVS_C_ARC_ARC_LEN_RATIO
    ARC_LINE_LEN_RATIO = _SLVS_C_ARC_LINE_LEN_RATIO
    ARC_ARC_DIFFERENCE = _SLVS_C_ARC_ARC_DIFFERENCE
    ARC_LINE_DIFFERENCE = _SLVS_C_ARC_LINE_DIFFERENCE

class EntityType(IntEnum):
    POINT_IN_3D = _SLVS_E_POINT_IN_3D
    POINT_IN_2D = _SLVS_E_POINT_IN_2D
    NORMAL_IN_3D = _SLVS_E_NORMAL_IN_3D
    NORMAL_IN_2D = _SLVS_E_NORMAL_IN_2D
    DISTANCE = _SLVS_E_DISTANCE
    WORKPLANE = _SLVS_E_WORKPLANE
    LINE_SEGMENT = _SLVS_E_LINE_SEGMENT
    CUBIC = _SLVS_E_CUBIC
    CIRCLE = _SLVS_E_CIRCLE
    ARC_OF_CIRCLE = _SLVS_E_ARC_OF_CIRCLE

def mark_dragged(ptA: Slvs_Entity):
    Slvs_MarkDragged(ptA)

def solve_sketch(grouph: int, calculateFaileds: bool):
    cdef Slvs_hConstraint *badp = NULL
    if not calculateFaileds:
        return Slvs_SolveSketch(grouph, NULL)
    else:
        result = Slvs_SolveSketch(grouph, &badp)
        bad = []
        if badp != NULL:
            for i in range(0, result.nbad):
                bad.append(badp[i])
            free(badp)
        return result, bad

def get_param_value(ph: int):
    return Slvs_GetParamValue(ph)

def set_param_value(ph: int, value: float):
    Slvs_SetParamValue(ph, value)

def clear_sketch():
    Slvs_ClearSketch()
